@@ -34,6 +34,7 @@ class ZMUseo2Plugin extends Plugin {
      */
     function __construct() {
         parent::__construct('Ultimate SEO2', 'Ultimate SEO 2.x for ZenMagick', '${plugin.version}');
+        $this->setContext(Plugin::CONTEXT_STOREFRONT);
         $this->setLoaderPolicy(ZMPlugin::LP_ALL);
     }
 
