@@ -68,7 +68,7 @@
      * to include in <code>core.php</code>. Also, this leaves the option of
      * alternative storage to improve loading time.</p>
      *
-     * @package org.zenmagick.store
+     * @package zenmagick.store.shared
      */
     function zm_get_default_settings() {
         $map = array(
