@@ -128,6 +128,8 @@ Release 0.9.10
 - allow singletons to be bean definitions
 - useo2: remove dependency on admin patch class
 - move more stuff into admin app
+- add _vzm() function as convenience wrapper arount _zm() acting the same as
+  zm_l10n()
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
